preparation de terrain pour ce soir

--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -36,50 +36,50 @@
             coords="422,374,456,271,471,227,449,187,394,200,298,60,213,69,196,127,226,181,202,243,174,258,197,304"
             data-original-coords = "422,374,456,271,471,227,449,187,394,200,298,60,213,69,196,127,226,181,202,243,174,258,197,304"
             href="#"
-            alt="Yonne" class="departement-area yonne">
+            alt="Yonne" class="departement-area yonne" data-num-dep="89">
         <area
             shape="poly"
             coords="190,307,310,327,422,379,439,430,421,536,362,554,295,580,204,543,205,440,180,366"
             data-original-coords = "190,307,310,327,422,379,439,430,421,536,362,554,295,580,204,543,205,440,180,366"
             href="#"
-            alt="Nievre" class="departement-area nievre">
+            alt="Nievre" class="departement-area nievre" data-num-dep="58">
         <area
             shape="poly"
             coords="426,342,456,278,479,200,549,157,640,281,711,306,714,374,697,437,653,482,545,502,520,475,470,447,436,408"
             data-original-coords = "426,342,456,278,479,200,549,157,640,281,711,306,714,374,697,437,653,482,545,502,520,475,470,447,436,408"
             href="#"
             alt="Cote_dor"
-            class="departement-area cote_dor">
+            class="departement-area cote_dor" data-num-dep="21">
         <area
             shape="poly"
             coords="325,557,352,618,389,643,382,721,470,732,514,697,564,729,616,628,668,648,704,613,692,519,660,487,546,500,495,465,465,441,421,438,419,539"
             data-original-coords = "325,557,352,618,389,643,382,721,470,732,514,697,564,729,616,628,668,648,704,613,692,519,660,487,546,500,495,465,465,441,421,438,419,539"
             href="#"
-            alt="Saone_et_Loire" class="departement-area saone_et_loire">
+            alt="Saone_et_Loire" class="departement-area saone_et_loire" data-num-dep="71">
         <area
             shape="poly"
             coords="719,393,786,383,831,368,870,334,919,325,954,310,968,309,961,283,958,251,971,233,953,213,926,193,880,191,847,193,830,172,793,193,744,240,741,272,712,272,677,287,700,299,692,334"
             data-original-coords = "719,393,786,383,831,368,870,334,919,325,954,310,968,309,961,283,958,251,971,233,953,213,926,193,880,191,847,193,830,172,793,193,744,240,741,272,712,272,677,287,700,299,692,334"
             href="#"
-            alt="Haute_Saone" class="departement-area haute_saone">
+            alt="Haute_Saone" class="departement-area haute_saone" data-num-dep="70">
         <area
             shape="poly"
             coords="769,468,808,502,852,541,826,583,835,601,885,563,900,536,905,490,953,457,1000,396,1020,362,995,330,976,309,899,320,818,374,752,394"
             data-original-coords = "769,468,808,502,852,541,826,583,835,601,885,563,900,536,905,490,953,457,1000,396,1020,362,995,330,976,309,899,320,818,374,752,394"
             href="#"
-            alt="Doubs" class="departement-area doubs">
+            alt="Doubs" class="departement-area doubs" data-num-dep="25">
         <area
             shape="poly"
             coords="672,643,705,699,734,677,764,694,791,699,826,652,838,603,831,563,850,539,803,489,759,462,771,430,747,396,710,384,663,457,673,507,698,521,678,531,695,600"
             data-original-coords = "672,643,705,699,734,677,764,694,791,699,826,652,838,603,831,563,850,539,803,489,759,462,771,430,747,396,710,384,663,457,673,507,698,521,678,531,695,600"
             href="#"
-            alt="Jura" class="departement-area jura">
+            alt="Jura" class="departement-area jura" data-num-dep="39">
         <area
             shape="poly"
             coords="1000,341,1028,325,1033,309,1017,285,1022,253,1005,231,974,230,961,248,961,287,968,307,991,314"
             data-original-coords = "1000,341,1028,325,1033,309,1017,285,1022,253,1005,231,974,230,961,248,961,287,968,307,991,314"
             href="#"
-            alt="Territoire_de_Belfort" class="departement-area territoire_de_belfort">
+            alt="Territoire_de_Belfort" class="departement-area territoire_de_belfort" data-num-dep="90">
       </map>
     </section>
 
@@ -94,7 +94,7 @@
         <!-- Remplacé <button> par <a> pour la navigation -->
         <a href="" class="button_base button_right1" data-chartkey="especesParStatutConservation">Nombre d'espèces par statut de conservation</a>
         <a href="" class="button_base button_right1" data-chartkey="especesParRegne">Nombre d'espèces par règne</a>
-        <a href="" class="button_base button_right1" data-chartkey="statutsConservation">Statuts de conservation par règne</a>
+        <a href="" class="button_base button_right1" data-chartkey="statutsConservationParRegne">Statuts de conservation par règne</a>
       </div>
     </aside>
   </div> <!-- Fin de .content-below -->
