mini chart moitié fait

--- a/guide_naturel/templates/index.html
+++ b/guide_naturel/templates/index.html
@@ -109,7 +109,7 @@
      border-radius: 10px;
      box-shadow: 0 0 10px rgba(0,0,0,0.1);
      z-index: 1200;
-     width: 230px; ">
+     width: 13%; ">
     <canvas id="mini-departement-chart"></canvas>
 </div>
 
